--- a/BusIk/app/src/main/AndroidManifest.xml
+++ b/BusIk/app/src/main/AndroidManifest.xml
@@ -96,6 +96,20 @@
                 android:value="" />
         </activity>
 
+        <activity
+            android:name=".client.SearchActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
