--- a/BusIk/app/src/main/AndroidManifest.xml
+++ b/BusIk/app/src/main/AndroidManifest.xml
@@ -13,13 +13,22 @@
         android:theme="@style/Theme.BusIk"
         tools:targetApi="31">
         <activity
-            android:name=".driver.DriverActivity"
+            android:name=".other.AuthActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+
+        <activity
+            android:name=".driver.DriverActivity"
+            android:exported="true">
 
             <meta-data
                 android:name="android.app.lib_name"
@@ -29,11 +38,6 @@
         <activity
             android:name=".driver.MarkClientsActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
 
             <meta-data
                 android:name="android.app.lib_name"
@@ -43,11 +47,6 @@
         <activity
             android:name=".client.ClientActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
 
             <meta-data
                 android:name="android.app.lib_name"
@@ -55,27 +54,8 @@
         </activity>
 
         <activity
-            android:name=".AuthActivity"
+            android:name=".other.RegisterActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-
-        <activity
-            android:name=".RegisterActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
 
             <meta-data
                 android:name="android.app.lib_name"
@@ -85,11 +65,6 @@
         <activity
             android:name=".operator.AttachDriverActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
 
             <meta-data
                 android:name="android.app.lib_name"
@@ -99,11 +74,15 @@
         <activity
             android:name=".client.SearchActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+
+        <activity
+            android:name=".client.BookActivity"
+            android:exported="true">
 
             <meta-data
                 android:name="android.app.lib_name"
