--- a/BusIk/app/src/main/AndroidManifest.xml
+++ b/BusIk/app/src/main/AndroidManifest.xml
@@ -107,6 +107,15 @@
                 android:value="" />
         </activity>
 
+        <activity
+            android:name=".operator.OperatorTripsActivity"
+            android:exported="true">
+
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
