--- a/Operator/OperatorDesktop/pom.xml
+++ b/Operator/OperatorDesktop/pom.xml
@@ -64,6 +64,11 @@
   </dependencies>
 
   <build>
+      <resources>
+          <resource>
+              <directory>${project.basedir}src/main/resources</directory>
+          </resource>
+      </resources>
     <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
     <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
     <plugins>
