--- a/Operator/OperatorDesktop/pom.xml
+++ b/Operator/OperatorDesktop/pom.xml
@@ -66,7 +66,7 @@
   <build>
       <resources>
           <resource>
-              <directory>${project.basedir}src/main/resources</directory>
+              <directory>src/main/resources</directory>
           </resource>
       </resources>
     <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
